[package]
name = "videohound"
version = "0.0.1"
edition = "2024"
description = "Universal video search library with modular support for multiple search engines and video platforms"
license = "MIT"

[dependencies]
async-trait = "0.1.88"
lazy_static = "1.5.0"
log = "0.4.27"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["gzip", "brotli", "json"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.4"
